support several geoip extensions

--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,14 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.0.4</version>
-    <date>2006-06-20</date>
+    <version>1.1.0</version>
+    <date>2006-09-07</date>
     <license>PHP/LGPL</license>
     <state>stable</state>
-    <notes>- first release
+    <notes>- support GeoIPCITY (if you have)
+- support GeoIPISP (if you have)
+- support GeoIPORG (if you have)
+- required over mod_geoip 1.1.0
 </notes>
     <filelist>
       <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
@@ -33,6 +36,16 @@
       <date>2006-06-20</date>
       <state>stable</state>
       <notes>- first release
+</notes>
+    </release>
+    <release>
+      <version>1.1.0</version>
+      <date>2006-09-07</date>
+      <state>stable</state>
+      <notes>- support GeoIPCITY (if you have)
+- support GeoIPISP (if you have)
+- support GeoIPORG (if you have)
+- required over mod_geoip 1.1.0
 </notes>
     </release>
     <release>
