--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml,v 1.5 2006-09-14 13:08:43 oops Exp $ -->
+<!-- $Id: package.xml,v 1.6 2006-09-14 13:10:03 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -20,6 +20,7 @@
     <state>stable</state>
     <notes>- add goeip city database search on/off function
 - add GeoIP database open type
+- add geoip region information
 </notes>
     <filelist>
       <file role="php" md5sum="@krisp.php@" name="krisp.php"/>
@@ -62,6 +63,7 @@
     <state>stable</state>
     <notes>- add goeip city database search on/off function
 - add GeoIP database open type
+- add geoip region information
 </notes>
     </release>
     <release>
