--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml,v 1.7 2006-09-14 17:29:09 oops Exp $ -->
+<!-- $Id: package.xml,v 1.8 2006-09-14 17:44:28 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -9,7 +9,7 @@
     <maintainer>
       <user>oops</user>
       <name>JoungKyun.Kim</name>
-      <email>admin@oops.org</email>
+      <email>http://www.oops.org</email>
       <role>lead</role>
     </maintainer>
   </maintainers>
@@ -24,11 +24,11 @@
 - fixed pear package format
 </notes>
     <filelist>
-      <file role="php" md5sum="3263c25cb838ba8142915792ea342388" name="krisp.php"/>
-      <file role="php" md5sum="c6f60aacb4da052977f236b2cdf8e7bd" name="krisp/db.php"/>
-      <file role="php" md5sum="6e7f33650e8c2bb2610896f984dad902" name="krisp/krisp.php"/>
-      <file role="php" md5sum="54e79af18812562bf448928f6175eca6" name="krisp/pdo.php"/>
-      <file role="php" md5sum="6318a052556dffbbe9a0f42c76cb9122" name="krisp/sqlite.php"/>
+      <file role="php" md5sum="fe47cb04ea43e265aa67c5969c90141e" name="krisp.php"/>
+      <file role="php" md5sum="9e47239d7e87bf701e383b01e220f6bf" name="krisp/db.php"/>
+      <file role="php" md5sum="c2f38f0963af8f035f341909fb6c11dd" name="krisp/krisp.php"/>
+      <file role="php" md5sum="59a39fa53f2790774f8e0067be5c8db0" name="krisp/pdo.php"/>
+      <file role="php" md5sum="f8a32835b4f43991e78fe0ea88b63ac5" name="krisp/sqlite.php"/>
       <file role="php" md5sum="a696ce62d9a4d9868627ce1c14451c56" name="krisp/georegion.php"/>
     </filelist>
   </release>
