--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml,v 1.8 2006-09-14 17:44:28 oops Exp $ -->
+<!-- $Id: package.xml,v 1.9 2006-12-01 10:14:24 oops Exp $ -->
 <package version="1.0">
   <name>krisp</name>
   <summary>php pure code for search krisp database</summary>
@@ -14,22 +14,20 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.1.2</version>
-    <date>2006-09-15</date>
+    <version>1.2.0</version>
+    <date>2006-12-01</date>
     <license>PHP/LGPL</license>
     <state>stable</state>
-    <notes>- add goeip city database search on/off function
-- add GeoIP database open type
-- add geoip region information
-- fixed pear package format
+    <notes>- support over libkrisp 2.1.0
+- support userdb
 </notes>
     <filelist>
-      <file role="php" md5sum="fe47cb04ea43e265aa67c5969c90141e" name="krisp.php"/>
-      <file role="php" md5sum="9e47239d7e87bf701e383b01e220f6bf" name="krisp/db.php"/>
-      <file role="php" md5sum="c2f38f0963af8f035f341909fb6c11dd" name="krisp/krisp.php"/>
+      <file role="php" md5sum="41710e1330c6841fc5d7d09deb569970" name="krisp.php"/>
+      <file role="php" md5sum="3a5b15ad429d75a7f9a29bd771707840" name="krisp/db.php"/>
+      <file role="php" md5sum="8d9835c6e09bff1b6bcd0d649ffafe78" name="krisp/krisp.php"/>
       <file role="php" md5sum="59a39fa53f2790774f8e0067be5c8db0" name="krisp/pdo.php"/>
       <file role="php" md5sum="f8a32835b4f43991e78fe0ea88b63ac5" name="krisp/sqlite.php"/>
-      <file role="php" md5sum="a696ce62d9a4d9868627ce1c14451c56" name="krisp/georegion.php"/>
+      <file role="php" md5sum="9f36d2669982028e9f980acf153b38aa" name="krisp/georegion.php"/>
     </filelist>
   </release>
   <changelog>
@@ -67,6 +65,23 @@
 - add GeoIP database open type
 - add geoip region information
 - fixed pear package format
+</notes>
+    </release>
+  <release>
+    <version>1.1.3</version>
+    <date>2006-09-16</date>
+    <license>PHP/LGPL</license>
+    <state>stable</state>
+    <notes>- fixed missing operation of retion information
+</notes>
+    </release>
+  <release>
+    <version>1.2.0</version>
+    <date>2006-12-01</date>
+    <license>PHP/LGPL</license>
+    <state>stable</state>
+    <notes>- support over libkrisp 2.1.0
+- support userdb
 </notes>
     </release>
     <release>
