--- a/package.xml
+++ b/package.xml
@@ -1,90 +1,164 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<!-- $Id: package.xml,v 1.9 2006-12-01 10:14:24 oops Exp $ -->
-<package version="1.0">
-  <name>krisp</name>
-  <summary>php pure code for search krisp database</summary>
-  <description>PEAR's krisp:: package support search krisp and GeoIP database.</description>
-  <maintainers>
-    <maintainer>
-      <user>oops</user>
-      <name>JoungKyun.Kim</name>
-      <email>http://www.oops.org</email>
-      <role>lead</role>
-    </maintainer>
-  </maintainers>
-  <release>
-    <version>1.2.0</version>
-    <date>2006-12-01</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- support over libkrisp 2.1.0
-- support userdb
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+	<!-- $Id: package.xml,v 1.10 2009-10-21 17:42:35 oops Exp $ -->
+	<name>krisp</name>
+	<channel>pear.oops.org</channel>
+	<summary>php pure code for search krisp database</summary>
+	<description>PEAR&apos;s krisp:: package support search krisp and GeoIP database.
+	</description>
+	<lead>
+		<name>JoungKyun.Kim</name>
+		<user>joungkyun</user>
+		<email>joungkyun@gmail.com</email>
+		<active>yes</active>
+	</lead>
+	<date>2009-10-22</date>
+	<time>02:41:03</time>
+	<version>
+		<release>1.2.1</release>
+		<api>1.2.0</api>
+	</version>
+	<stability>
+		<release>stable</release>
+		<api>stable</api>
+	</stability>
+	<license>PHP/LGPL</license>
+	<notes>- support over class of php5
+- changed subdirectory name to KRISP
+- changed class name to upper case (from krisp to KRSIP)
+- fixed db error when don&apos;t exists userdb
+	</notes>
+	<contents>
+		<dir name="/">
+			<dir name="KRISP">
+				<file role="php" md5sum="dc082cc7f307a5fb75d9ab42d8dbba1a"        name="db.php" />
+				<file role="php" md5sum="cd8760ac5fb0ac4b578b83a151c16683" name="georegion.php" />
+				<file role="php" md5sum="555e197d2b2eb776f28f276ccc2745e3"     name="krisp.php"     />
+				<file role="php" md5sum="eb34ccea11150c515802599217f0264c"       name="pdo.php" />
+				<file role="php" md5sum="fab20b3bb9e93e0176c1dc940f4bbac9"    name="sqlite.php" />
+			</dir> <!-- //krisp -->
+			<file md5sum="dcf69067bb16dbd88ec90876414cc685" name="krisp.php" role="php" />
+		</dir> <!-- / -->
+	</contents>
+	<dependencies>
+		<required>
+			<php>
+				<min>5.0.0</min>
+			</php>
+			<pearinstaller>
+				<min>1.4.0b1</min>
+			</pearinstaller>
+		</required>
+	</dependencies>
+	<phprelease />
+	<changelog>
+		<release>
+			<version>
+				<release>1.0.4</release>
+				<api>1.0.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-06-20</date>
+			<license>PHP/LGPL</license>
+			<notes>- first release
 </notes>
-    <filelist>
-      <file role="php" md5sum="41710e1330c6841fc5d7d09deb569970" name="krisp.php"/>
-      <file role="php" md5sum="3a5b15ad429d75a7f9a29bd771707840" name="krisp/db.php"/>
-      <file role="php" md5sum="8d9835c6e09bff1b6bcd0d649ffafe78" name="krisp/krisp.php"/>
-      <file role="php" md5sum="59a39fa53f2790774f8e0067be5c8db0" name="krisp/pdo.php"/>
-      <file role="php" md5sum="f8a32835b4f43991e78fe0ea88b63ac5" name="krisp/sqlite.php"/>
-      <file role="php" md5sum="9f36d2669982028e9f980acf153b38aa" name="krisp/georegion.php"/>
-    </filelist>
-  </release>
-  <changelog>
-    <release>
-      <version>1.0.4</version>
-      <date>2006-06-20</date>
-      <state>stable</state>
-      <notes>- first release
-</notes>
-    </release>
-    <release>
-      <version>1.1.0</version>
-      <date>2006-09-07</date>
-      <state>stable</state>
-      <notes>- support GeoIPCITY (if you have)
+		</release>
+		<release>
+			<version>
+				<release>1.1.0</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-07</date>
+			<license>PHP/LGPL</license>
+			<notes>- support GeoIPCITY (if you have)
 - support GeoIPISP (if you have)
 - support GeoIPORG (if you have)
 - required over mod_geoip 1.1.0
 </notes>
-    </release>
-  <release>
-    <version>1.1.1</version>
-    <date>2006-09-09</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>-change memory type
+		</release>
+		<release>
+			<version>
+				<release>1.1.1</release>
+				<api>1.1.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-09</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>-change memory type
 </notes>
-    </release>
-  <release>
-    <version>1.1.2</version>
-    <date>2006-09-15</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- add goeip city database search on/off function
+		</release>
+		<release>
+			<version>
+				<release>1.1.2</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-15</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- add goeip city database search on/off function
 - add GeoIP database open type
 - add geoip region information
 - fixed pear package format
 </notes>
-    </release>
-  <release>
-    <version>1.1.3</version>
-    <date>2006-09-16</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- fixed missing operation of retion information
+		</release>
+		<release>
+			<version>
+				<release>1.1.3</release>
+				<api>1.1.2</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-09-16</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- fixed missing operation of retion information
 </notes>
-    </release>
-  <release>
-    <version>1.2.0</version>
-    <date>2006-12-01</date>
-    <license>PHP/LGPL</license>
-    <state>stable</state>
-    <notes>- support over libkrisp 2.1.0
+		</release>
+		<release>
+			<version>
+				<release>1.2.0</release>
+				<api>1.2.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2006-12-01</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- support over libkrisp 2.1.0
 - support userdb
 </notes>
-    </release>
-    <release>
-    </release>
-  </changelog>
+		</release>
+		<release>
+			<version>
+				<release>1.2.1</release>
+				<api>1.2.0</api>
+			</version>
+			<stability>
+				<release>stable</release>
+				<api>stable</api>
+			</stability>
+			<date>2009-10-22</date>
+			<license uri="http://www.example.com">PHP/LGPL</license>
+			<notes>- support over class of php5
+- changed subdirectory name to KRISP
+- changed class name to upper case (from krisp to KRSIP)
+- fixed db error when don&apos;t exists userdb
+</notes>
+		</release>
+	</changelog>
 </package>
