--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id: package.xml,v 1.11 2010-05-21 15:39:20 oops Exp $ -->
+	<!-- $Id: package.xml,v 1.12 2010-08-05 14:34:25 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
-	<description>PEAR&apos;s krisp:: package support search krisp and GeoIP database.
+	<description>PEAR&apos;s krisp:: package support search krisp database.
+This version is required over libkrisp v3.0.0 database scheme.
+If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	</description>
 	<lead>
 		<name>JoungKyun.Kim</name>
@@ -12,33 +14,28 @@
 		<email>joungkyun@gmail.com</email>
 		<active>yes</active>
 	</lead>
-	<date>2009-10-22</date>
-	<time>04:24:18</time>
+	<date>2010-08-05</date>
+	<time>23:24:56</time>
 	<version>
-		<release>1.2.1</release>
-		<api>1.2.0</api>
+		<release>2.0.0</release>
+		<api>2.0.0</api>
 	</version>
 	<stability>
 		<release>stable</release>
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>- support over class of php5
-- changed subdirectory name to KRISP
-- changed class name to upper case (from krisp to KRSIP)
-- fixed db error when don&apos;t exists userdb
-- If ccode is KR, print with local character set about iname, city, region.
-	</notes>
+	<notes>- support libkrisp v3.0.0 database scheme
+</notes>
 	<contents>
 		<dir name="/">
 			<dir name="KRISP">
-				<file role="php" md5sum="dc082cc7f307a5fb75d9ab42d8dbba1a"        name="db.php" />
-				<file role="php" md5sum="43ec8fe1bdf6dfd05be0e6265c801bee" name="georegion.php" />
-				<file role="php" md5sum="8be81e0315901221c79a7592f3a2d375"     name="krisp.php"     />
+				<file role="php" md5sum="612f2d8c38c5b203b4d7d6c8e7c2238d"        name="db.php" />
+				<file role="php" md5sum="314c81a78b0aa6a48a9102beacfaa5fc"     name="krisp.php" />
 				<file role="php" md5sum="e07586efc08f2a5d1144d95ec1fc941c"       name="pdo.php" />
 				<file role="php" md5sum="fab20b3bb9e93e0176c1dc940f4bbac9"    name="sqlite.php" />
 			</dir> <!-- //krisp -->
-			<file md5sum="2c5831521f971cde6eea4c23c7200b40" name="krisp.php" role="php" />
+			<file md5sum="5d55382e3be973058e7292eb7c2588b3" name="krisp.php" role="php" />
 		</dir> <!-- / -->
 	</contents>
 	<dependencies>
@@ -49,117 +46,27 @@
 			<pearinstaller>
 				<min>1.4.0b1</min>
 			</pearinstaller>
+            <package>
+                <name>IPCALC</name>
+                <channel>pear.oops.org</channel>
+                <min>1.0.2</min>
+            </package>
 		</required>
 	</dependencies>
 	<phprelease />
 	<changelog>
 		<release>
 			<version>
-				<release>1.0.4</release>
-				<api>1.0.0</api>
+				<release>2.0.0</release>
+				<api>2.0.0</api>
 			</version>
 			<stability>
 				<release>stable</release>
 				<api>stable</api>
 			</stability>
-			<date>2006-06-20</date>
-			<license>PHP/LGPL</license>
-			<notes>- first release
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.1.0</release>
-				<api>1.1.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2006-09-07</date>
-			<license>PHP/LGPL</license>
-			<notes>- support GeoIPCITY (if you have)
-- support GeoIPISP (if you have)
-- support GeoIPORG (if you have)
-- required over mod_geoip 1.1.0
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.1.1</release>
-				<api>1.1.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2006-09-09</date>
-			<license uri="http://www.example.com">PHP/LGPL</license>
-			<notes>-change memory type
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.1.2</release>
-				<api>1.1.2</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2006-09-15</date>
-			<license uri="http://www.example.com">PHP/LGPL</license>
-			<notes>- add goeip city database search on/off function
-- add GeoIP database open type
-- add geoip region information
-- fixed pear package format
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.1.3</release>
-				<api>1.1.2</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2006-09-16</date>
-			<license uri="http://www.example.com">PHP/LGPL</license>
-			<notes>- fixed missing operation of retion information
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.2.0</release>
-				<api>1.2.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2006-12-01</date>
-			<license uri="http://www.example.com">PHP/LGPL</license>
-			<notes>- support over libkrisp 2.1.0
-- support userdb
-</notes>
-		</release>
-		<release>
-			<version>
-				<release>1.2.1</release>
-				<api>1.2.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2009-10-22</date>
-			<license uri="http://www.example.com">PHP/LGPL</license>
-			<notes>- support over class of php5
-- changed subdirectory name to KRISP
-- changed class name to upper case (from krisp to KRSIP)
-- fixed db error when don&apos;t exists userdb
-- If ccode is KR, print with local character set about iname, city, region.
+			<date>2010-08-05</date>
+			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
+			<notes>- support libkrisp v3.0.0 database scheme
 </notes>
 		</release>
 	</changelog>
