--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
-	<!-- $Id$ -->
+	<!-- $Id: package.xml,v 1.12 2010-08-05 14:34:25 oops Exp $ -->
 	<name>krisp</name>
 	<channel>pear.oops.org</channel>
 	<summary>php pure code for search krisp database</summary>
@@ -14,28 +14,28 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 		<email>joungkyun@gmail.com</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-09-09</date>
-	<time>21:14:14</time>
+	<date>2010-08-05</date>
+	<time>23:24:56</time>
 	<version>
-		<release>2.0.1</release>
+		<release>2.0.0</release>
 		<api>2.0.0</api>
 	</version>
 	<stability>
-		<release>devel</release>
+		<release>stable</release>
 		<api>stable</api>
 	</stability>
 	<license>PHP/LGPL</license>
-	<notes>
+	<notes>- support libkrisp v3.0.0 database scheme
 </notes>
 	<contents>
 		<dir name="/">
 			<dir name="KRISP">
-				<file role="php" md5sum="110dfa84d9ec6d95ed5dd3016e9846fb"        name="db.php" />
-				<file role="php" md5sum="8faea4560c84d649042a997607735a23"     name="krisp.php" />
-				<file role="php" md5sum="77b89f17d4de939d9bb4318f76b17415"       name="pdo.php" />
-				<file role="php" md5sum="472b3689717e5fb86f85a2646a4f304d"    name="sqlite.php" />
+				<file role="php" md5sum="612f2d8c38c5b203b4d7d6c8e7c2238d"        name="db.php" />
+				<file role="php" md5sum="314c81a78b0aa6a48a9102beacfaa5fc"     name="krisp.php" />
+				<file role="php" md5sum="e07586efc08f2a5d1144d95ec1fc941c"       name="pdo.php" />
+				<file role="php" md5sum="fab20b3bb9e93e0176c1dc940f4bbac9"    name="sqlite.php" />
 			</dir> <!-- //krisp -->
-			<file md5sum="faae79559f3e03ceb45dc6febbc01473" name="krisp.php" role="php" />
+			<file md5sum="5d55382e3be973058e7292eb7c2588b3" name="krisp.php" role="php" />
 		</dir> <!-- / -->
 	</contents>
 	<dependencies>
@@ -55,20 +55,6 @@ If you use under libkrisp v3.0.0 database scheme, use pear_krisp 1.x
 	</dependencies>
 	<phprelease />
 	<changelog>
-		<release>
-			<version>
-				<release>2.0.1</release>
-				<api>2.0.0</api>
-			</version>
-			<stability>
-				<release>stable</release>
-				<api>stable</api>
-			</stability>
-			<date>2012-09-09</date>
-			<license uri="http://www.gnu.org/licenses/lgpl.txt">PHP/LGPL</license>
-			<notes>
-</notes>
-		</release>
 		<release>
 			<version>
 				<release>2.0.0</release>
